--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
      <header>
-          <div class="baslik">
+          <h2 class="baslik">
                COUNTER
-          </div>
+          </h2>
      </header>
      <main>
           <div class="btn">
